--- a/style/header-style/header.scss
+++ b/style/header-style/header.scss
@@ -1,13 +1,20 @@
-.header {
-    @include flex($align-items: center, $justify-content: space-between);
+header {
+	@include flex($justify-content: center);
 
     background-color: $white-color;
-    box-shadow: 0 0.25rem $opacity-black-color;
-    padding: 1.375rem 2.1875rem 1.5625rem 2.4375rem;
     position: fixed;
-    z-index: 9999;
-
-    @import './header-style/hamburger-menu.scss';
-    @import './header-style/logo-container.scss';
-    @import './header-style/right-header-container.scss';
+    width: 100%;
+    z-index: 1;
+    
+    .header {
+        @include flex($align-items: center, $justify-content: space-between);
+    
+        box-shadow: 0 0.25rem $opacity-black-color;
+        padding: 1.375rem 2.1875rem 1.5625rem 2.4375rem;
+        
+    
+        @import './header-style/hamburger-menu.scss';
+        @import './header-style/logo-container.scss';
+        @import './header-style/right-header-container.scss';
+    }
 }
