--- a/style/possibilities-container/possibilities-container.scss
+++ b/style/possibilities-container/possibilities-container.scss
@@ -1,58 +1,65 @@
 .possibilities-container {
-    @include flex($justify-content: center);
+	@include flex($justify-content: center);
 
-    .possibilities-content {
-        @include flex($justify-content: space-between);
+	.possibilities-content {
+		@include flex($align-items: center, $justify-content: space-between);
 
-        box-shadow: 0 0 1.875rem rgba(52 ,52, 52, 0.15);
-        padding: 3.625rem 2.1875rem 3.625rem 2.4375rem;
-        margin-top: 3.4375rem;
+		background-color: $white-color;
+		box-shadow: 0 0 1.875rem rgba(52 ,52, 52, 0.15);
+		padding: 3.625rem 2.1875rem 3.625rem 2.4375rem;
+		margin-top: 3.4375rem;
 
-        .possibilities-item {
-            @include flex($align-items: center, $justify-content: center);
+		.possibilities-item {
+			@include flex($align-items: center, $justify-content: center);
 
-            margin: 0 auto;
-            margin-right: 3.6rem;
+			margin: 0 auto;
+			margin-right: 3.6rem;
 
-            &:not(:first-child) {
-                display: none;
-            }
+			&:not(:first-child) {
+				display: none;
+			}
 
-            & img {
-                height: auto;
-                margin-right: 2.625rem;
-                
-                &:nth-child(1) {
-                    width: 4.875rem;
-                }
+			&:nth-child(2) {
+				border-left: 0.125rem solid rgba(52 ,52, 52, 0.15);
+				border-right: 0.125rem solid rgba(52 ,52, 52, 0.15);
+				padding-left: 4.25rem;
+				padding-right: 5rem;
+			}
 
-                &:nth-child(2) {
-                    width: 4.3125rem;
-                }
+			& img {
+				height: auto;
+				margin-right: 2.625rem;
+				
+				&:nth-child(1) {
+					width: 4.875rem;
+				}
 
-                &:nth-child(3) {
-                    width: 3.75rem;
-                }
-            }
+				&:nth-child(2) {
+					width: 4.3125rem;
+				}
 
-            .possibilities-text {
-                @include flex($flex-direction: column);
+				&:nth-child(3) {
+					width: 3.75rem;
+				}
+			}
 
-                & h3 {
-                    color: #3E3E3E;
-                    font-family: 'Maven Pro', sans-serif;
-                    font-size: 1.6875rem;
-                    font-weight: bold;
-                    margin-top: 1.3125rem;
-                }
+			.possibilities-text {
+				@include flex($flex-direction: column);
 
-                & span {
-                    color: #767676;
-                    font-family: 'Lato', sans-serif;
-                    font-size: 1.4375rem;
-                    margin-top: 1.125rem;
-                }
-            }
-        }
-    }
+				& h3 {
+					color: #3E3E3E;
+					font-family: 'Maven Pro', sans-serif;
+					font-size: 1.6875rem;
+					font-weight: bold;
+				}
+
+				& span {
+					color: #767676;
+					font-family: 'Lato', sans-serif;
+					font-size: 1.4375rem;
+					margin-top: 1.125rem;
+				}
+			}
+		}
+	}
 }
