Added ingredients container

--- a/style/index.scss
+++ b/style/index.scss
@@ -52,6 +52,10 @@ body {
 	/* Video container */
 
 	@import './video-container/video-container.scss';
+
+	/* Ingredients container */
+
+	@import './ingredients-container/ingredients-container.scss';
 }
 
 /* Media */
