--- a/style/header-style/header.scss
+++ b/style/header-style/header.scss
@@ -13,8 +13,8 @@ header {
         padding: 1.375rem 2.1875rem 1.5625rem 2.4375rem;
         
     
-        @import './header-style/hamburger-menu.scss';
-        @import './header-style/logo-container.scss';
-        @import './header-style/right-header-container.scss';
+        @import './hamburger-menu.scss';
+        @import './logo-container.scss';
+        @import './right-header-container.scss';
     }
 }
