--- a/style/order-container/order-container.scss
+++ b/style/order-container/order-container.scss
@@ -1,12 +1,18 @@
 .order-container {
+	@include flex($justify-content: center);
+
 	.order-content {
-		@include flex($justify-content: space-between);
+		@include flex($align-items: center, $justify-content: center);
+
+		padding-bottom: 3.125rem;
+		padding-top: 2.0625rem;
 
 		.click {
 			@include flex($flex-direction: column);
 
 			display: none;
 			position: relative;
+			margin-bottom: 25rem;
 
 			span {
 				font-family: 'Maven Pro', sans-serif;
@@ -27,12 +33,147 @@
 
 		.payment {
 			@include flex($flex-direction: column);
+
+			.form-title {
+				@include flex($align-items: center);
+
+				color: #35393B;
+				border-bottom: 0.0625rem solid #e6e6e6;
+				font-family: 'Maven Pro', sans-serif;
+				font-size: 1.5625rem;
+				font-weight: 400;
+				padding-bottom: 2.6875rem;
+				padding-right: 1.5rem;
+				
+				.location {
+					@include flex($align-items: center, $justify-content: center);
+
+					background-color: $main-color;
+					border-radius: 100%;
+					height: 5rem;
+					margin-right: 2.75rem;
+					width: 5rem;
+
+					& img {
+						height: auto;
+						width: 2.375rem;
+					}
+				}
+			}
+
+			.form-payment {
+				@include flex($flex-direction: column);
+
+				margin-top: 2.8125rem;
+				margin-bottom: 2rem;
+				width: 100%;
+
+				label {
+					margin-bottom: 3.375rem;
+					width: 100%;
+					
+					&:first-child .wrap {
+						background-image: url('../../images/order-imges/arrow-black-bottom.png');
+					}
+
+					.wrap {
+						background-image: url('../../images/order-imges/arrow-gray-bottom.png');
+						background-repeat: no-repeat;
+						background-position: right 1.5rem center;
+						cursor: pointer;
+					}
+
+					p {
+						color: #35393B;
+						font-family: 'Maven Pro', sans-serif;
+						font-size: 1.1875rem;
+						font-weight: 600;
+						margin-bottom: 1.0625rem;
+					}
+
+					&:nth-child(2) p {
+						color: #AFAFAF;
+					}
+
+					select {
+						border: none;
+						-webkit-appearance: none;
+					}
+
+					input, select {
+						background-color: $white-color;
+						background: transparent;
+						border: 0.09375rem solid #e7e7e7;
+						border-radius: 0.125rem;
+						box-shadow: none;
+						color: #1F2126;
+						font-family: 'Lato', sans-serif;
+						font-size: 1.1875rem;
+						font-weight: 600;
+						outline: none;
+						padding: 1.5rem 0 1.5rem 1.5625rem;
+						width: 100%;
+					}
+
+					&:not(:first-child) {
+						input, select {
+							color: #AFAFAF;
+							font-weight: 400;
+						}
+					}
+				}
+
+				.town-info {
+					@include flex($justify-content: space-between);
+
+					width: 100%;
+
+					& label {
+						width: 47%;
+					}
+					
+					input {
+						font-weight: 400;
+					}
+
+					& label:last-child {
+						p {
+							color: #35393B;
+						}
+					}
+				}
+
+				button {
+					background-color: $main-color;
+					border-radius: 0.3125rem;
+					color: $white-color;
+					font-family: 'Maven Pro', sans-serif;
+					font-size: 1.4375rem;
+					padding: 2.625rem;
+					outline: none;
+					width: 100%;
+
+					&:hover {
+						background-color: #f5f5f5;
+						border-color: #f5f5f5;
+						box-shadow: 0 0 0.625rem $opacity-black-color;
+						color: $main-color;
+					}
+
+					&:active {
+						border: unset;
+					}
+				}
+			}
 		}
 
 		.flower {
 			display: none;
-			height: auto;
-			width: 20.75rem;
+
+			img {
+				height: auto;
+				width: 20.75rem;
+			}
 		}
 	}
 }
