--- a/style/product-container/product-container.scss
+++ b/style/product-container/product-container.scss
@@ -81,16 +81,18 @@
 
 			margin: 0 auto;
 			margin-top: 3.75rem;
+			width: 95%;
 
 			.product-button {
-				@include flex;
+				@include flex($justify-content: center);
 	
 				background-color: $main-color;
 				border-radius: 0.25rem;
 				color: $white-color;
 				font-family: 'Maven Pro', sans-serif;
 				font-size: 2rem;
-				padding: 2.125rem 8.5rem;
+				padding: 2.125rem;
+				width: 95%;
 				transition-duration: 0.5s;
 	
 				&:hover {
