--- a/style/video-container/video-container.scss
+++ b/style/video-container/video-container.scss
@@ -20,20 +20,21 @@
 		@include flex($flex-direction: column);
 
 		padding: 4.25rem 2.1875rem 4.25rem 2.4375rem;
+		width: 100%;
 		
 		h3 {
 			color: #222;
 			font-family: 'Maven Pro', sans-serif;
 			font-size: 2.625rem;
 			font-weight: 400;
+			margin-bottom: 3.5rem;
 		}
 
-		p {
+		span {
 			color: #777;
 			font-family: 'Lato', sans-serif;
 			font-size: 1.4rem;
 			font-weight: 300;
-			margin-top: 3.5rem;
 		}
 
 		.video-button {
@@ -43,9 +44,11 @@
 			font-family: 'Maven Pro', sans-serif;
 			font-size: 1.3125rem;
 			letter-spacing: 0.0625rem;
-			padding: 2.75rem 12.4rem;
+			padding: 2.75rem;
 			margin: 0 auto;
 			margin-top: 3.25rem;
+			text-align: center;
+			width: 97%;
 
 			&:hover {
 				color: $main-color;
