Added news container

--- a/style/index/index.scss
+++ b/style/index/index.scss
@@ -60,6 +60,10 @@ body {
 	/* Order container */
 
 	@import '../order-container/order-container.scss';
+
+	/* News container */
+
+	@import '../news-container/news-container.scss';
 }
 
 /* Media */
