--- a/style/order-container/order-container.scss
+++ b/style/order-container/order-container.scss
@@ -152,6 +152,7 @@
 					padding: 2.625rem;
 					outline: none;
 					width: 100%;
+					transition-duration: 0.5s;
 
 					&:hover {
 						background-color: #f5f5f5;
@@ -160,8 +161,9 @@
 						color: $main-color;
 					}
 
-					&:active {
+					&:active, &:focus {
 						border: unset;
+						transform: translate(0);
 					}
 				}
 			}
