--- a/style/video-container/video-container.scss
+++ b/style/video-container/video-container.scss
@@ -49,6 +49,7 @@
 			margin-top: 3.25rem;
 			text-align: center;
 			width: 97%;
+			transition-duration: 0.5s;
 
 			&:hover {
 				color: $main-color;
