Added pre footer container

--- a/style/index/index.scss
+++ b/style/index/index.scss
@@ -64,6 +64,10 @@ body {
 	/* News container */
 
 	@import '../news-container/news-container.scss';
+
+	/* Pre footer container */
+
+	@import '../pre-footer-container/pre-footer-container.scss';
 }
 
 /* Media */
