--- a/style/index/index.scss
+++ b/style/index/index.scss
@@ -68,6 +68,10 @@ body {
 	/* Pre footer container */
 
 	@import '../pre-footer-container/pre-footer-container.scss';
+
+	/* Footer container */
+
+	@import '../footer-container/footer-container.scss';
 }
 
 /* Media */
