Made some fix in media and added some mixins

--- a/style/footer-container/footer-container.scss
+++ b/style/footer-container/footer-container.scss
@@ -8,8 +8,8 @@ footer {
 		padding: 0 2.1875rem 0 2.4375rem;
 		
 		span {
-			border-top: 0.125rem solid #f3f4f4;
-			color: #8C8F94;
+			border-top: 0.125rem solid $white-color-7;
+			color: $grey-color-3;
 			padding: 4.6875rem 0 4.6875rem 0;
 			width: 100%;
 
