--- a/style/header-style/basket-container.scss
+++ b/style/header-style/basket-container.scss
@@ -3,22 +3,16 @@
 	position: relative;
 
 	& img {
-		height: auto;
-		width: 2.5rem;
+		@include sizes($width: 2.5rem);
 	}
 
 	.count {
 		@include flex($align-items: center, $justify-content: center);
+		@include font($color: $white-color, $font-size: 1.25rem);
+		@include sizes($height: 1.6875rem, $width: 1.6875rem);
+		@include position($position: absolute, $right: -29%, $top: -15%);
 		
 		background-color: $main-color;
 		border-radius: 100%;
-		color: $white-color;
-		font-family: 'Maven Pro', sans-serif;
-		font-size: 1.25rem;
-		height: 1.6875rem;
-		position: absolute;
-		right: -29%;
-		top: -15%;
-		width: 1.6875rem;
 	}
 }
