--- a/style/ingredients-container/ingredients-container.scss
+++ b/style/ingredients-container/ingredients-container.scss
@@ -1,7 +1,7 @@
 .ingredients-container {
 	@include flex($justify-content: center);
 
-	background-color: #f5f5f5;
+	background-color: $white-color-3;
 
 	.ingredients-content {
 		@include flex($flex-direction: column);
@@ -11,18 +11,14 @@
 		padding-bottom: 6.375rem;
 
 		& > h3 {
-			color: #333740;
-			font-family: 'Maven Pro', sans-serif;
-			font-size: 2.375rem;
-			font-weight: 400;
+			@include font($color: $black-color-5, $font-size: 2.375rem, $font-weight: 400);
+
 			margin-top: 3.75rem;
 		}
 
 		& > span {
-			color: #83888F;
-			font-family: 'Lato', sans-serif;
-			font-size: 1.375rem;
-			font-weight: 300;
+			@include font($color: $grey-color-7, $font-family: 'Lato', $font-size: 1.375rem, $font-weight: 300);
+
 			margin-top: 2.875rem;
 		}
 
@@ -32,10 +28,10 @@
 			margin-top: 2.5rem;
 
 			& > img {
-				height: auto;
+				@include sizes($width: 16.4375rem);
+
 				margin-left: -1.875rem;
 				position: absolute;
-				width: 16.4375rem;
 			}
 
 			.ingredients-characteristics {
@@ -54,7 +50,7 @@
 						.title {
 							@include flex($align-items: center);
 							
-							color: #333740;
+							color: $black-color-5;
 							font-weight: 600;
 							margin-bottom: 1.375rem;
 
@@ -64,17 +60,18 @@
 							}
 
 							.border {
+								@include sizes($height: 2.3125rem, $width: 0.4375rem);
+
 								background-color: $main-color;
 								border-radius: 0.1875rem;
-								height: 2.3125rem;
-								width: 0.4375rem;
 							}
 						}
 	
 						p {
-							color: #5b5f64;
+							@include sizes($width: 18.625rem);
+
+							color: $grey-color-8;
 							font-size: 0.9rem;
-							width: 18.625rem;
 						}
 
 						&:nth-child(even) {
