--- a/style/news-container/news-container.scss
+++ b/style/news-container/news-container.scss
@@ -1,5 +1,5 @@
 .news-container {
-	background-color: #f5f5f5;
+	background-color: $white-color-3;
 
 	.news-content {
 		@include flex($justify-content: center);
@@ -8,24 +8,21 @@
 		padding: 6.25rem 0;
 
 		& > img {
+			@include sizes($width: 26.8125rem);
 			display: none;
-			height: auto;
 			position: absolute;
-			width: 26.8125rem;
 		}
 
 		& > img:nth-child(2) {
-			width: 13.6875rem;
+			@include sizes($width: 13.6875rem);
 		}
 
 		.news {
 			@include flex($align-items: center, $flex-direction: column);
 
 			h3 {
-				color: #26292C;
-				font-family: 'Maven Pro', sans-serif;
-				font-size: 1.875rem;
-				font-weight: 400;
+				@include font($color: $black-color-8, $font-size: 1.875rem, $font-weight: 400);
+
 				margin-bottom: 3.75rem;
 			}
 
@@ -33,39 +30,36 @@
 				@include flex($align-items: center, $justify-content: space-between);
 
 				border-radius: 0.3125rem;
-				border: 0.0625rem solid #dbd7d7;
+				border: 0.0625rem solid $white-color-6;
 				cursor: pointer;
 				padding: 0.625rem 0.75rem 0.625rem 2rem;
 				margin-bottom: 3.25rem;
 				width: 100%;
 
 				input[type="text"] {
+					@include font($color: $black-color-8, $font-family: 'Lato', $font-size: 1.5625rem);
+
 					border: none;
-					background-color: #f5f5f5;
-					color: #26292C;
-					font-family: 'Lato', sans-serif;
-					font-size: 1.5625rem;
-					font-weight: 600;
+					background-color: $white-color-3;
 					outline: none;
 					-webkit-appearance: none;
 					width: 100%;
 				}
 
 				input[type="button"] {
+					@include font($color: $white-color, $font-size: 1.25rem);
+
 					border: none;
 					background-color: $main-color;
 					border-radius: 0.3125rem;
-					color: $white-color;
 					cursor: pointer;
-					font-family: 'Maven Pro', sans-serif;
-					font-size: 1.25rem;
 					padding: 1.875rem 3rem;
 					outline: none;
 					transition-duration: 0.5s;
 
 					&:hover {
-						background-color: #f5f5f5;
-						border-color: #f5f5f5;
+						background-color: $white-color-3;
+						border-color: $white-color-3;
 						box-shadow: 0 0 0.625rem $opacity-black-color;
 						color: $main-color;
 					}
@@ -73,10 +67,7 @@
 			}
 
 			span {
-				color: #8C8F94;
-				font-family: 'Lato', sans-serif;
-				font-size: 1.625rem;
-				font-weight: 300;
+				@include font($color: $grey-color-3, $font-family: 'Lato', $font-size: 1.625rem, $font-weight: 300);
 			}
 		}
 	}
