--- a/style/order-container/order-container.scss
+++ b/style/order-container/order-container.scss
@@ -15,19 +15,15 @@
 			margin-bottom: 25rem;
 
 			span {
-				font-family: 'Maven Pro', sans-serif;
-				font-size: 2.5rem;
-				font-weight: 400;
+				@include font($font-size: 2.5rem, $font-weight: 400);
+				
 				letter-spacing: 0.125rem;
 				transform: rotate(-10deg);
 			}
 
 			img {
-				height: auto;
-				position: absolute;
-				margin-left: 55%;
-				margin-top: 7.25rem;
-				width: 20.25rem;
+				@include sizes($width: 20.25rem);
+				@include position($position: absolute, $left: 55%, $top: 7.25rem);
 			}
 		}
 
@@ -36,27 +32,22 @@
 
 			.form-title {
 				@include flex($align-items: center);
+				@include font($color: $black-color-6, $font-size: 1.5625rem, $font-weight: 400);
 
-				color: #35393B;
-				border-bottom: 0.0625rem solid #e6e6e6;
-				font-family: 'Maven Pro', sans-serif;
-				font-size: 1.5625rem;
-				font-weight: 400;
+				border-bottom: 0.0625rem solid $white-color-2;
 				padding-bottom: 2.6875rem;
 				padding-right: 1.5rem;
 				
 				.location {
 					@include flex($align-items: center, $justify-content: center);
+					@include sizes($height: 5rem, $width: 5rem);
 
 					background-color: $main-color;
 					border-radius: 100%;
-					height: 5rem;
 					margin-right: 2.75rem;
-					width: 5rem;
 
 					& img {
-						height: auto;
-						width: 2.375rem;
+						@include sizes($width: 2.375rem);
 					}
 				}
 			}
@@ -84,15 +75,12 @@
 					}
 
 					p {
-						color: #35393B;
-						font-family: 'Maven Pro', sans-serif;
-						font-size: 1.1875rem;
-						font-weight: 600;
+						@include font($color: $black-color-6, $font-size: 1.1875rem, $font-weight: 600);
 						margin-bottom: 1.0625rem;
 					}
 
 					&:nth-child(2) p {
-						color: #AFAFAF;
+						color: $grey-color-9;
 					}
 
 					select {
@@ -101,15 +89,13 @@
 					}
 
 					input, select {
+						@include font($color: $black-color-7, $font-family: 'Lato', $font-size: 1.1875rem);
+
 						background-color: $white-color;
 						background: transparent;
-						border: 0.09375rem solid #e7e7e7;
+						border: 0.09375rem solid $white-color-5;
 						border-radius: 0.125rem;
 						box-shadow: none;
-						color: #1F2126;
-						font-family: 'Lato', sans-serif;
-						font-size: 1.1875rem;
-						font-weight: 600;
 						outline: none;
 						padding: 1.5rem 0 1.5rem 1.5625rem;
 						width: 100%;
@@ -117,7 +103,7 @@
 
 					&:not(:first-child) {
 						input, select {
-							color: #AFAFAF;
+							color: $grey-color-9;
 							font-weight: 400;
 						}
 					}
@@ -138,25 +124,23 @@
 
 					& label:last-child {
 						p {
-							color: #35393B;
+							color: $black-color-6;
 						}
 					}
 				}
 
 				button {
+					@include font($color: $white-color, $font-size: 1.4375rem);
+
 					background-color: $main-color;
 					border-radius: 0.3125rem;
-					color: $white-color;
-					font-family: 'Maven Pro', sans-serif;
-					font-size: 1.4375rem;
 					padding: 2.625rem;
 					outline: none;
 					width: 100%;
-					transition-duration: 0.5s;
 
 					&:hover {
-						background-color: #f5f5f5;
-						border-color: #f5f5f5;
+						background-color: $white-color-3;
+						border-color: $white-color-3;
 						box-shadow: 0 0 0.625rem $opacity-black-color;
 						color: $main-color;
 					}
@@ -173,8 +157,7 @@
 			display: none;
 
 			img {
-				height: auto;
-				width: 20.75rem;
+				@include sizes($width: 20.75rem);
 			}
 		}
 	}
