--- a/style/possibilities-container/possibilities-container.scss
+++ b/style/possibilities-container/possibilities-container.scss
@@ -5,8 +5,8 @@
 		@include flex($align-items: center, $justify-content: space-between);
 
 		background-color: $white-color;
-		box-shadow: 0 0 1.875rem rgba(52 ,52, 52, 0.15);
-		padding: 3.625rem 2.1875rem 3.625rem 2.4375rem;
+		box-shadow: 0 0 1.875rem $opacity-black-color-2;
+		padding: 3.625rem 2.4375rem 3.625rem 2.4375rem;
 		margin-top: 3.4375rem;
 
 		.possibilities-item {
@@ -20,8 +20,8 @@
 			}
 
 			&:nth-child(2) {
-				border-left: 0.125rem solid rgba(52 ,52, 52, 0.15);
-				border-right: 0.125rem solid rgba(52 ,52, 52, 0.15);
+				border-left: 0.125rem solid $opacity-black-color-2;
+				border-right: 0.125rem solid $opacity-black-color-2;
 				padding-left: 4.25rem;
 				padding-right: 5rem;
 			}
@@ -47,16 +47,12 @@
 				@include flex($flex-direction: column);
 
 				& h3 {
-					color: #3E3E3E;
-					font-family: 'Maven Pro', sans-serif;
-					font-size: 1.6875rem;
-					font-weight: bold;
+					@include font($color: $grey-color, $font-size: 1.6875rem);
 				}
 
 				& span {
-					color: #767676;
-					font-family: 'Lato', sans-serif;
-					font-size: 1.4375rem;
+					@include font($color: $grey-color-2, $font-family: 'Lato', $font-size: 1.4375rem, $font-weight: 400);
+					
 					margin-top: 1.125rem;
 				}
 			}
