--- a/style/pre-footer-container/pre-footer-container.scss
+++ b/style/pre-footer-container/pre-footer-container.scss
@@ -13,30 +13,26 @@
 				margin-bottom: 3rem;
 
 				& img {
-					height: auto;
+					@include sizes($width: 4.4375rem);
+
 					margin-right: 3.375rem;
-					width: 4.4375rem;
 				}
 			
 				& span:nth-child(1n+1) {
-					color: $black-color;
-					font-family: 'Maven Pro', sans-serif;
-					font-size: 2.5rem;
-					font-weight: 600;
+					@include font($color: $black-color, $font-size: 2.5rem);
 				}
 			
 				& span:nth-child(3) {
-					font-weight: 400;
+					@include font($color: $black-color, $font-size: 2.5rem, $font-weight: 400);
 				}
 			}
 
 			& > span {
-				color: #8C8F94;
-				font-family: 'Lato', sans-serif;
-				font-size: 1.625rem;
+				@include font($color: $grey-color-3, $font-family: 'Lato', $font-size: 1.625rem, $font-weight: 400);
+				@include sizes($width: 27.875rem);
+
 				line-height: 2.5rem;
 				margin-bottom: 4rem;
-				width: 27.875rem;
 			}
 
 			.share-buttons {
@@ -44,41 +40,35 @@
 
 				margin-bottom: 4rem;
 
-				a {
-					img {
-						height: auto;
-					}
-				}
-
 				a:not(:last-child) {
 					margin-right: 2.6875rem;
 				}
 
 				a:nth-child(1) {
 					img {
-						width: 2rem;
+						@include sizes($width: 2rem);
 					}
 				}
 				
 				a:nth-child(2) {
 					img {
-						width: 1.125rem;
+						@include sizes($width: 1.125rem);
 					}
 				}
 				a:nth-child(3) {
 					img {
-						width: 2.8125rem;
+						@include sizes($width: 2.8125rem);
 					}
 				}
 				a:nth-child(4) {
 					img {
-						width: 1.625rem;
+						@include sizes($width: 1.625rem);
 					}
 				}
 				
 				a:nth-child(5) {
 					img {
-						width: 1.875rem;
+						@include sizes($width: 1.875rem);
 					}
 				}
 			}
@@ -86,25 +76,20 @@
 
 		.pre-footer-nav {
 			@include flex($flex-wrap: wrap, $justify-content: space-between);
-
-			width: 32.75rem;
+			@include sizes($width: 32.75rem);
 
 			.nav-item {
 				@include flex($flex-direction: column);
 
 				h3 {
-					color: #26272D;
-					font-family: 'Maven Pro', sans-serif;
-					font-size: 1.375rem;
-					font-weight: 600;
+					@include font($color: $black-color-3, $font-size: 1.375rem);
+
 					letter-spacing: 0.125rem;
 					margin-bottom: 2.5rem;
 				}
 
 				a {
-					color: #8C8F94;
-					font-family: 'Lato', sans-serif;
-					font-size: 1.625rem;
+					@include font($color: $grey-color-3, $font-family: 'Lato', $font-size: 1.625rem, $font-weight: 400);
 
 					&:not(:last-child) {
 						margin-bottom: 2rem;
