--- a/style/video-container/video-container.scss
+++ b/style/video-container/video-container.scss
@@ -3,16 +3,14 @@
 	
 	.video {
 		@include flex($align-items: flex-end, $flex-direction: column, $justify-content: flex-end);
+		@include sizes($height: 26.75rem, $width: 100%);
 
-		background-color: #9e9e9e;
-		height: 26.75rem;
+		background-color: $grey-color-5;
 		padding-bottom: 2.3125rem;
 		padding-right: 2.625rem;
-		width: 100%;
 
 		& a img {
-			height: auto;
-			width: 7.9375rem;
+			@include sizes($width: 7.9375rem);
 		}
 	}
 
@@ -23,26 +21,20 @@
 		width: 100%;
 		
 		h3 {
-			color: #222;
-			font-family: 'Maven Pro', sans-serif;
-			font-size: 2.625rem;
-			font-weight: 400;
+			@include font($color: $black-color-4, $font-size: 2.625rem, $font-weight: 400);
+
 			margin-bottom: 3.5rem;
 		}
 
 		span {
-			color: #777;
-			font-family: 'Lato', sans-serif;
-			font-size: 1.4rem;
-			font-weight: 300;
+			@include font($color: $grey-color-6, $font-family: 'Lato', $font-size: 1.4rem, $font-weight: 300);
 		}
 
 		.video-button {
+			@include font($color: $white-color, $font-size: 1.3125rem);
+
 			background-color: $main-color;
 			border-radius: 0.25rem;
-			color: $white-color;
-			font-family: 'Maven Pro', sans-serif;
-			font-size: 1.3125rem;
 			letter-spacing: 0.0625rem;
 			padding: 2.75rem;
 			margin: 0 auto;
@@ -53,7 +45,7 @@
 
 			&:hover {
 				color: $main-color;
-				background-color: #f5f5f5;
+				background-color: $white-color-3;
 				box-shadow: 0 0 0.625rem $opacity-black-color;
 			}
 		}
